syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat.Contracts.Client;

message ClientMessage {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  ClientMessageType type = 4;
  ClientMessageStatus status = 5;
  oneof data {
      string text = 6;
  }
  map<int64, string> reactions = 7;
}

enum ClientMessageType {
  UNKNOWN = 0;
  PLAIN_TEXT = 1;
  DISCONNECT = 2;
  ACK = 3;
}

enum ClientMessageStatus {
  UNPROCESSED = 0;
  LOST = 1;
  PROCESSED = 2;
  DELIVERED = 3;
}